Mapeando coleções de objetos embutidos com @ElementCollection